--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,3 +1,9 @@
+.sidebar {
+    flex: 0.3;
+    max-width: 300px;
+    padding-right: 20px;
+}
+
 .sidebar_compose {
     margin-top: 15px !important;
     margin-left: 10px !important;
