--- a/src/styles/SendMail.css
+++ b/src/styles/SendMail.css
@@ -11,6 +11,7 @@
   border-top-right-radius: 10px;
   border: 1px solid whitesmoke;
   box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.24);
+  height: 70%;
 }
 
 .sendMail_header {
@@ -53,6 +54,12 @@
 
 .sendMail_message {
     flex: 1;
+    height: 30px;
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    outline: none;
+    resize: none;
 }
 
 .sendMail_error {
